force-app/main/default/objects/Student_Game__c/Student_Game__c.object-meta.xml
<CustomObject>
    <label>Student Game</label>
    <nameField>
        <label>Student Game</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>