force-app/main/default/objects/Student_Game__c/fields/Class_Student__c.field-meta.xml
<CustomField>
    <fullName>Class_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Student</label>
    <referenceTo>Class_Student__c</referenceTo>
    <relationshipLabel>Student Games</relationshipLabel>
    <relationshipName>Student_Games</relationshipName>
    <type>Lookup</type>
</CustomField>