force-app/main/default/objects/Student_Game__c/fields/Fees_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fees_Balance__c</fullName>
    <formula>Fees_To_Be_Paid__c -  Fees_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>