force-app/main/default/objects/Student_Game__c/fields/Fees_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_To_Be_Paid__c</fullName>
    <label>Fees To Be Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>