force-app/main/default/objects/Student_Game__c/fields/Tournament_Sport__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Sport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tournament Sport</label>
    <referenceTo>Tournament_Sport__c</referenceTo>
    <relationshipLabel>Student Games</relationshipLabel>
    <relationshipName>Student_Games</relationshipName>
    <type>Lookup</type>
</CustomField>